--- a/news21national/templates/n21alpha/api/v1/stories_by_category_xml.html
+++ b/news21national/templates/n21alpha/api/v1/stories_by_category_xml.html
@@ -1,8 +1,11 @@
+{% load smart_if %}
 <?xml version="1.0" encoding="utf-8"?>
 <stories version="1.0">
     {% for story in stories %}
     <story>
-        <id>{{ story.id }}</id>
+        <slug>{{ story.slug }}</slug>
+		<headline>{{ story.headline }}</headline>
+		<summary>{{ story.summary }}</summary>
     </story>
     {% endfor %}
 </stories>
