--- a/news21national/templates/n21alpha/authopenid/signin.html
+++ b/news21national/templates/n21alpha/authopenid/signin.html
@@ -27,7 +27,7 @@
 <br>
 {% endif %}
 <h2>Log-In:</h2>
-<!--<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>-->
+<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
 <div class="login">
 
     <form id="auth_form" name="auth_form" action="{% url user_signin %}" method="post">
@@ -76,4 +76,3 @@ $(document).ready(function() {
 <!-- /Simple OpenID Selector -->
     
 {% endblock %}
-
