--- a/news21national/templates/n21alpha/core/dashboard.html
+++ b/news21national/templates/n21alpha/core/dashboard.html
@@ -11,7 +11,7 @@
 	
 	<div class="grid_8">
 		<div class="contentcontainer">
-		<h4>Announcements</h4>
+		<h4>News21 Announcements</h4>
 		{% if site_wide_announcements %}
 	        <div id="site_wide_announcements">
 	            <ul>
