updated avatar labels, story

--- a/news21national/templates/n21alpha/core/profile.html
+++ b/news21national/templates/n21alpha/core/profile.html
@@ -27,8 +27,8 @@
 
 <div class="grid_6">
 	<div class="contentcontainer">
-		<h4>Your Avatar {% comment %} (<a href="http://www.gravatar.com">gravatar.com</a>) {% endcomment %}</h4>
-		{% avatar user 250 %}<br/><a href="{% url avatar_change %}">Change your avatar</a>
+		<h4>Your Avatar/Photo {% comment %} (<a href="http://www.gravatar.com">gravatar.com</a>) {% endcomment %}</h4>
+		{% avatar user 250 %}<br/><a href="{% url avatar_change %}">Change your photo</a>
 	</div>
 </div>
 {% endblock %}
