--- a/news21national/templates/n21alpha/avatar/add.html
+++ b/news21national/templates/n21alpha/avatar/add.html
@@ -4,13 +4,13 @@
 {% block content %}
 <div class="grid_16">
 	<div class="contentcontainer">
-    <p>{% trans "Your current avatar: " %}</p>
+    <p>{% trans "Your current photo: " %}</p>
     {% avatar user 250 %}
     {% if not avatars %}
-        <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
+        <p>{% trans "You haven't uploaded an photo yet. Please upload one now." %}</p>
     {% endif %}
     <form enctype="multipart/form-data" method="POST" action="{% url avatar_add %}">
-		<p>NOTE: The avatar will be displayed 250px by 250px <br/>For best results upload a square image equal to larger than these dimensions.</p>
+		<p>NOTE: The photo will be displayed 250px by 250px <br/>For best results upload a square image equal to larger than these dimensions.</p>
         {{ upload_avatar_form.as_p }}
         <p><input type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
