--- a/news21national/templates/n21alpha/story/story.html
+++ b/news21national/templates/n21alpha/story/story.html
@@ -19,6 +19,7 @@
 				{% endfor %}
 			</select>
 		</p>
+		{% if story_id != '' %}
 		<p>
 			<label>Publish Title & Dates:</label>
 			<span class="inputDiv">
@@ -32,6 +33,7 @@
 			<label>&nbsp;</label>
 			<input type="text" id="publishdatetitle" size="20"> between <input type="text" id="available_at" class="jcal"> - <input type="text" id="expires_at" class="jcal"> <input type="button" id="add_publishdate" value="+">
 		</p>
+		{% endif %}
 		<div class="clear"></div>
 		<br/>
 		{% comment %}
@@ -244,14 +246,14 @@
 	}
 	
 	$(window).load(function () {
-		
+		{% comment %}
 		$('#add_publishdate').click( function() {
 		  	$.post("{% url storypublishdate_create metastory_id story_id %}", { "title": $('#publishdatetitle').val() , "available_at": $('#available_at').val() , "expires_at": $('#expires_at').val() },
 			   function(data){
 			     alert(data.success);
 			   }, "json");
 		});
-
+		{% endcomment %}
 		$('#twitter_description').keyup(function(){
 			limitChars('twitter_tweet', 140, 'charlimittwitter');
 	 	})
