commented out geotagging

--- a/news21national/templates/n21alpha/multimedia/photo.html
+++ b/news21national/templates/n21alpha/multimedia/photo.html
@@ -64,7 +64,7 @@
 	
 	<div class="clear"></div>
 	<br/>
-	
+	{% comment %}
 	<p>
 		<label>GeoTag:</label>
 		{{ geotag.point }}
@@ -73,7 +73,7 @@
 	
 	<div class="clear"></div>
 	<br/>
-	
+	{% endcomment %}
 	<div class="inputSubmit">
 		{% if image %}
 		<input type="submit" value="Continue &rarr;">
