added text to avatar

--- a/news21national/templates/n21alpha/avatar/base.html
+++ b/news21national/templates/n21alpha/avatar/base.html
@@ -12,7 +12,7 @@
  -->
 {% endblock %}
 
-
+{% comment %}
 {% block hightlight_error %}
 	{% if messages %}
 	<div class="grid_16">
@@ -32,6 +32,6 @@
 	</div>
 	{% endif %}
 {% endblock %}
-
+{% endcomment %}
 
 {% block content %}{% endblock %}
