--- a/news21national/templates/n21alpha/story/metastory.html
+++ b/news21national/templates/n21alpha/story/metastory.html
@@ -133,7 +133,7 @@
 {% endblock %}
 
 {% block extra_scripts %}
-<script src='http://maps.google.com/maps?file=api&amp;v=2&amp;key={{ GOOGLE_MAPS_API_KEY }}'></script>
+<script src='http://maps.google.com/maps?file=api&amp;v=2&amp;key={{ google_maps_api_key }}'></script>
 <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.js"></script>
