--- a/news21national/templates/n21alpha/editorsdesk/dashboard.html
+++ b/news21national/templates/n21alpha/editorsdesk/dashboard.html
@@ -10,58 +10,65 @@
 {% block content %}
 <div class="grid_16 contentheader"><h3>Editor's Desk</h3></div>
 <div class="grid_16 contentheader">
-	<h4><a href="{% url editorsdesk_analytics %}">Analytics</a></h4>
-	{% comment %}
-	<h4>Announcements</h4>
-	{% if site_wide_announcements %}
-        <div id="site_wide_announcements">
-            <ul>
+	
+	<div class="contentcontainer">
+		<h4 class="module-header">News21 Announcements</h4>
+		{% if site_wide_announcements %}
+	        <div id="site_wide_announcements" class="announcements">
                 {% for announcement in site_wide_announcements %}
-                <li>
-                    {{ announcement }} : {{ announcement.creation_date|date:"M dS" }} - <a href="{% url announcement_hide announcement.pk %}?next={{ request.path }}">[Hide]</a> <br/> {{ announcement.content }}
-                </li>
+                    <div class="announcement-title">{{ announcement }} - <a href="{% url announcement_hide announcement.pk %}?next={{ request.path }}">[Hide]</a></div>
+ 					<div class="announcement-body">{{ announcement.content }}</div>
                 {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-	<h4>Messages</h4>
-	<ul class="subnavilist">
-	    <li><a href="{% url messages_inbox %} ">{% trans "Inbox" %} ({% inbox_count %})</a></li>
-	    <li><a href="{% url messages_outbox %} ">{% trans "Sent Messages" %}</a></li>
-	    <li><a href="{% url messages_compose %} ">{% trans "New Message" %}</a></li>
-	    <li><a href="{% url messages_trash %} ">{% trans "Trash" %}</a></li>
-	</ul>
-	{% endcomment %}
-	
-	<h4>Pending Assets</h4>
-	
-	{% for asset in pending_assets %}
-	<div class="sidebar-right-listing alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
-		{% if asset.get_child_name == "photo" %}
-		<span class="icon-photo"></span><a href="">{{ asset }} (From: {{ asset.story }})</a>
+	        </div>
+	    {% endif %}
+		
+		<br/><br/>
+		
+		<h4 class="module-header">Messages</h4>
+		<ul class="subnavilist">
+		    <li><a href="{% url messages_inbox %} ">{% trans "Inbox" %} ({% inbox_count %})</a></li>
+		    <li><a href="{% url messages_outbox %} ">{% trans "Sent Messages" %}</a></li>
+		    <li><a href="{% url messages_compose %} ">{% trans "New Message" %}</a></li>
+		    <li><a href="{% url messages_trash %} ">{% trans "Trash" %}</a></li>
+		</ul>
+		
+		<br/><br/>
+		
+		<h4 class="module-header">Analytics</h4>
+		<a href="{% url editorsdesk_analytics %}">View Reports</a>
+		
+		<br/><br/>
+		
+		<h4 class="module-header">Pending Assets</h4>
+		{% for asset in pending_assets %}
+		<div class="sidebar-right-listing alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+			{% if asset.get_child_name == "photo" %}
+			<span class="icon-photo"></span><a href="">{{ asset }} (From: {{ asset.story }})</a>
+			{% endif %}
+			{% if asset.get_child_name == "plaintext" %}
+			<span class="icon-plaintext"></span><a href="">{{ asset }} (From: {{ asset.story }}</a>
+			{% endif %}
+			{% if asset.get_child_name == "audio" %}
+			<span class="icon-audio"></span><a href="">{{ asset }} (From: {{ asset.story }}</a>
+			{% endif %}
+		</div>
+		{% endfor %}
+		{% if pending_assets.count == 0 %}
+			<div>You have not created any pending assets yet.</div>
 		{% endif %}
-		{% if asset.get_child_name == "plaintext" %}
-		<span class="icon-plaintext"></span><a href="">{{ asset }} (From: {{ asset.story }}</a>
-		{% endif %}
-		{% if asset.get_child_name == "audio" %}
-		<span class="icon-audio"></span><a href="">{{ asset }} (From: {{ asset.story }}</a>
+		
+		<br/><br/>
+		
+		<h4 class="module-header">Story Packages</h4>
+		{% for package in metastories %}
+		<div class="sidebar-right-listing alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+			<a href="{% url editorsdesk_review_metastory package.id %}">{{package}}</a>
+		</div>
+		{% endfor %}
+		{% if pending_assets.count == 0 %}
+			<div>You have not created any pending assets yet.</div>
 		{% endif %}
 	</div>
-	{% endfor %}
-	{% if pending_assets.count == 0 %}
-		<div>You have not created any pending assets yet.</div>
-	{% endif %}
-	
-	<h4>Story Packages</h4>
-	
-	{% for package in metastories %}
-	<div class="sidebar-right-listing alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
-		<a href="{% url editorsdesk_review_metastory package.id %}">{{package}}</a>
-	</div>
-	{% endfor %}
-	{% if pending_assets.count == 0 %}
-		<div>You have not created any pending assets yet.</div>
-	{% endif %}
 	
 </div>
 
