updated maps api key

--- a/news21national/templates/n21alpha/base.html
+++ b/news21national/templates/n21alpha/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>News21 -{{ MEDIA_URL }}-</title>
+        <title>Asset Management &amp; Syndication | News21</title>
         
 		{% if request.is_secure %}
         <meta http-equiv="X-XRDS-Location" content="https://{{ request.get_host }}{% url oid_xrdf %}" />
